--- a/css/geo_audio.css
+++ b/css/geo_audio.css
@@ -1,33 +1,45 @@
 @import url(../js/Cesium/Widgets/widgets.css);
-	body {
-		background-color: #111;
-		font-family: "Open Sans";
-		color:dodgerblue;
-	}
-	button {
-		border: 5px;
-		border-radius: 5px;
-		margin:5px;
-		margin-bottom:20px;
-		padding:10px;
-		font-family: "Open Sans";
-		color:dodgerblue;
-		background-color:#222;
-		outline:0;
-	}
-	button:hover {
-		cursor: pointer;
-		background-color:#333;
-	}
-	button:disabled {
-		color:#444;
-	}
-	select {
-		border: 5px;
-		border-radius: 5px;
-		padding:10px;
-		font-family: "Open Sans";
-		color:dodgerblue;
-		background-color:#222;
-		outline:0;
-	}
+body {
+    background-color: #111;
+    font-family: "Open Sans";
+    color:dodgerblue;
+}
+button {
+    border: 5px;
+    border-radius: 5px;
+    margin:5px;
+    margin-bottom:20px;
+    padding:10px;
+    font-family: "Open Sans";
+    color:dodgerblue;
+    background-color:#222;
+    outline:0;
+}
+button:hover {
+    cursor: pointer;
+    background-color:#333;
+}
+button:disabled {
+    color:#444;
+}
+button:active {
+    background-color:#555;
+}
+select {
+    border: 5px;
+    border-radius: 5px;
+    padding:10px;
+    font-family: "Open Sans";
+    color:dodgerblue;
+    background-color:#222;
+    outline:0;
+}
+input {
+    border: 5px;
+    border-radius: 5px;
+    padding:5px;
+    font-family: "Open Sans";
+    color:steelblue;
+    background-color:#335;
+    outline:0;
+}
